# WalshUCR

./: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/: prepare_paper_data.py  validate_paper_data.py
data/manifests/: paper_data_manifest.json  paper_results_manifest.toml
data/paper/table_app_ensemble_grid/: table_app_ensemble_grid.csv
data/paper/table_d16_checks/: table_d16_checks_instance_best.csv  table_d16_checks_summary.csv  table_d16_checks_summary.md
data/paper/table_param_decomposition/: table_param_decomposition.csv
experiments/appendix/rank_diagnostics/: config.toml  run.py  verify_input_ensemble_linear_independence.py
experiments/sec5_numerical_experiments/_impl/: common.py  restart_reuse.py  weyl_problem.py  weyl_statevector_backend.py  wh_d8_sweep.py  wh_d8_walsh_degree1_sweep.py  wh_degree_sweep.py
experiments/sec5_numerical_experiments/fig_haar_d8_sweep/: config.toml  run.py
experiments/sec5_numerical_experiments/fig_wh_d8_sweep/: config.toml  run.py  run_wd1.py
experiments/sec5_numerical_experiments/fig_wh_degree_sweep/: config.toml  run.py
experiments/ucr_method/: atucr_weyl_init_sweep.py
figures/: build_paper_figures.py
figures/paper/: exact_haar_d8_gap_single_panel_summary.json  figure_manifest.json  wh_md_sweep_gap_zoom_two_panel_no_walsh_rs_wd1_rsucr_median_only_summary.json  wh_md_walsh_degree_gap_instances_median_tableau4_k1_k5_full_compressed_opaque_lw06_summary.json
src/scalable_vqsd/: benchmarks.py
src/walsh_ucr/: benchmarks.py  engine.py
tests/: test_smoke.py
(+39 files in other folders)
